# GA4-MCP-Remote

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE  README.en.md  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: deploy-cloud-run.md  dify-system-prompt-ga4-mcp-tools.md
scripts/: deploy-cloud-run.sh  generate-bearer-token.sh  init-bearer-secret.sh
src/ga4_remote_mcp/: __init__.py  __main__.py  cli.py  context.py
src/ga4_remote_mcp/config/: __init__.py  settings.py
src/ga4_remote_mcp/errors/: __init__.py  normalize.py
src/ga4_remote_mcp/ga/: __init__.py  coordinator.py  server.py
src/ga4_remote_mcp/ga/tools/: utils.py
src/ga4_remote_mcp/ga/tools/admin/: info.py
src/ga4_remote_mcp/ga/tools/reporting/: core.py  metadata.py  realtime.py
src/ga4_remote_mcp/policy/: __init__.py  allowlist.py  guardrails.py  semaphores.py  semaphores_registry.py
src/ga4_remote_mcp/structured_log/: __init__.py  jsonlog.py
src/ga4_remote_mcp/transport/: __init__.py  app.py  middleware.py
tests/: conftest.py  test_allowlist.py  test_bearer_auth.py  test_contract_tools.py  test_deploy_cloud_run_script.py  test_error_normalize.py  test_guardrails.py  test_http_smoke.py  test_integration_placeholder.py  test_log_safety.py  test_settings_production_auth.py
